Remove usage of MaxPermSize flag in settings
This flag is ignored in Java 8.

Change-Id: I9ad26298b2f24191d030e09ca831234192a7fcd8